--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "just-debounce-it": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "wouter": "^2.7.4"
   },
